// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows passing a test id 1`] = `
<button
  class="TextLink TextLink--primary"
  data-test-id="test-id"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`allows passing additional class names to component 1`] = `
<button
  class="TextLink testing TextLink--primary"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`allows passing additional props not consumed by component 1`] = `
<button
  class="TextLink TextLink--primary"
  data-test-id="Testing Id"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`calls an onClick function 1`] = `
<button
  class="TextLink TextLink--primary"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`prevents onClick function from being called when disabled 1`] = `
<button
  class="TextLink TextLink--primary TextLink--disabled"
  data-test-id="cf-ui-text-link"
  disabled=""
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a "muted" link type 1`] = `
<button
  class="TextLink TextLink--muted"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a "negative" link type 1`] = `
<button
  class="TextLink TextLink--negative"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a "positive" link type 1`] = `
<button
  class="TextLink TextLink--positive"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a "primary" link type 1`] = `
<button
  class="TextLink TextLink--primary"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a "secondary" link type 1`] = `
<button
  class="TextLink TextLink--secondary"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a "white" link type 1`] = `
<button
  class="TextLink TextLink--white"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a button 1`] = `
<button
  class="TextLink TextLink--primary"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</button>
`;

exports[`renders as a link 1`] = `
<a
  class="TextLink TextLink--primary"
  data-test-id="cf-ui-text-link"
  href="#"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
  </span>
</a>
`;

exports[`renders with an icon 1`] = `
<button
  class="TextLink TextLink--primary"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    <div
      class="TextLink__icon-wrapper"
    >
      <svg
        class="Icon Icon--small Icon--primary TextLink__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    Text Link
  </span>
</button>
`;

exports[`renders with an icon aligned right to the text 1`] = `
<button
  class="TextLink TextLink--primary"
  data-test-id="cf-ui-text-link"
  type="button"
>
  <span
    class="TabFocusTrap"
    tabindex="-1"
  >
    Text Link
    <div
      class="TextLink__icon-wrapper--right"
    >
      <svg
        class="Icon Icon--small Icon--primary TextLink__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
  </span>
</button>
`;
